Добавлено копирование данных заказ-наряда в Excel

--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -95,6 +95,7 @@
                                           InputGestureText="Enter"/>
                                 <MenuItem Header="Распечатать" Command="{Binding PrintOrderCommand}"
                                           InputGestureText="Ctrl+P"/>
+                                <MenuItem Header="Копировать в Excel" Command="{Binding CopyOrderToClipboardCommand}"/>
                                 <Separator/>
                                 <MenuItem Header="Закрыть" Command="{Binding CloseOrderCommand}"/>
                             </ContextMenu>
