--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -116,7 +116,7 @@
                                     Binding="{Binding Model.PatientFnp}"/>
                 <DataGridTextColumn Header="Доктор/техник" ElementStyle="{StaticResource DataGridTextStyle}"  Width="*"
                                     Binding="{Binding Model.DoctorFullName}"/>
-                <DataGridTextColumn Header="Закрыт" ElementStyle="{StaticResource DataGridTextStyle}" Width="Auto"
+                <DataGridTextColumn Header="Закрыт" ElementStyle="{StaticResource DataGridTextStyle}" Width="*"
                                     Binding="{Binding Model.Closed, StringFormat='dd.MM.yyyy HH:mm'}"/>
             </DataGrid.Columns>
         </DataGrid>
