--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterAdditionalEquipmentUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterAdditionalEquipmentUserControl.xaml
@@ -1,10 +1,9 @@
-﻿<UserControl x:Class="Germadent.Rma.App.Views.UserControls.MillingCenterAdditionalEquipmentUserControl"
+﻿<UserControl x:Class="Germadent.Rma.App.Views.Wizard.MillingCenterAdditionalEquipmentUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
-             xmlns:local="clr-namespace:Germadent.Rma.App.Views.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800"
              d:DataContext="{d:DesignInstance Type=designMock:DesignMockMillingCenterAdditionalEquipmentViewModel, IsDesignTimeCreatable=True}">
