--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="Germadent.Rma.App.Views.UserControls.MillingCenterInfoStepUserControl"
+﻿<UserControl x:Class="Germadent.Rma.App.Views.Wizard.MillingCenterInfoStepUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Germadent.Rma.App.Views.UserControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:designMock="clr-namespace:Germadent.Rma.App.Views.DesignMock"
              xmlns:properties="clr-namespace:Germadent.Rma.App.Properties"
              mc:Ignorable="d" 
@@ -16,10 +15,13 @@
                 <Setter Property="HorizontalAlignment" Value="Right"/>
                 <Setter Property="Margin" Value="0,6,0,0"/>
             </Style>
+
+            <Style TargetType="{x:Type Border}" BasedOn="{StaticResource InfoTextBorderStyle}"/>
         </Grid.Resources>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto" MinWidth="210" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="50" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
@@ -31,26 +33,31 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Row="0" Grid.Column="0" Text="Заказчик *" Margin="0,0,0,3"
-                   ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"/>
+        <Border Grid.Row="0" Grid.Column="0">
+            <TextBlock Text="Заказчик" Margin="0,0,0,1"/>
+        </Border>
         <TextBox Grid.Row="0" Grid.Column="1" Margin="6,0,0,0"
                  Text="{Binding Customer, UpdateSourceTrigger=PropertyChanged}" />
+        <Button Grid.Row="0" Grid.Column="2" Margin="6,0,0,0" Content="..." />
 
-        <TextBlock Grid.Row="1" Grid.Column="0" Text="ФИО пациента *" 
-                   ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"/>
+        <Border Grid.Row="1" Grid.Column="0" Margin="0,6,0,0">
+            <TextBlock Text="ФИО пациента" Margin="0,0,0,1"/>
+        </Border>
         <TextBox Grid.Row="1" Grid.Column="1" Margin="6,6,0,0"
                  Text="{Binding Patient, UpdateSourceTrigger=PropertyChanged}" />
+        <Button Grid.Row="1" Grid.Column="2" Margin="6,6,0,0" Content="..." />
 
         <TextBlock Grid.Row="2" Grid.Column="0" Text="ФИО техника" VerticalAlignment="Center"
                    ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"
                    HorizontalAlignment="Right" Margin="0,6,0,0" />
         <TextBox Grid.Row="2" Grid.Column="1" Margin="6,6,0,0"
                  Text="{Binding TechnicFullName, UpdateSourceTrigger=PropertyChanged}" />
+        <Button Grid.Row="2" Grid.Column="2" Margin="6,6,0,0" Content="..." />
 
         <TextBlock Grid.Row="3" Grid.Column="0" Text="Номер тел. техника" VerticalAlignment="Center"
                    ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"
                    HorizontalAlignment="Right" Margin="0,6,0,0" />
-        <TextBox Grid.Row="3" Grid.Column="1" Margin="6,6,0,0"
+        <TextBox Grid.Row="3" Grid.Column="1" Grid.ColumnSpan="2" Margin="6,6,0,0" Width="150" HorizontalAlignment="Left"
                  Text="{Binding TechnicPhone, UpdateSourceTrigger=PropertyChanged}" />
 
         <TextBlock Grid.Column="0" Grid.Row="4" Text="Дата и время получения работы"/>
@@ -58,6 +65,6 @@
                     SelectedDate="{Binding Created}" SelectedDateFormat="Short" />
 
         <TextBlock Grid.Column="0" Grid.Row="5" Text="Комментарий по времени"/>
-        <TextBox Grid.Column="1" Grid.Row="5" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
+        <TextBox Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="5" Margin="6,6,0,0" Text="{Binding DateComment, UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </UserControl>
