--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MouthUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MouthUserControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Germadent.Rma.App.Views.UserControls.MouthUserControl"
+﻿<UserControl x:Class="Germadent.Rma.App.Views.Wizard.MouthUserControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
