--- a/src/Germadent.UserManagementCenter.App/Views/UsersView.xaml
+++ b/src/Germadent.UserManagementCenter.App/Views/UsersView.xaml
@@ -5,8 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Germadent.UserManagementCenter.App.Views"
              xmlns:designTime="clr-namespace:Germadent.UserManagementCenter.App.Views.DesignTime"
+             xmlns:viewModels="clr-namespace:Germadent.UserManagementCenter.App.ViewModels"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800"
+             d:DesignHeight="450" d:DesignWidth="600"
              d:DataContext="{d:DesignInstance d:Type={x:Type designTime:DesignMockUsersManagerViewModel}, IsDesignTimeCreatable=True}">
     <Grid>
         <Grid.RowDefinitions>
@@ -16,8 +17,30 @@
 
         <ListBox Grid.Row="0"
                  ItemsSource="{Binding Users}"
-                 SelectedItem="{Binding SelectedUser}">
+                 SelectedItem="{Binding SelectedUser}"
+                 ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+            <ListBox.ItemTemplate>
+                <DataTemplate DataType="{x:Type viewModels:UserViewModel}">
+                    <Grid Margin="3,0,3,0">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
 
+                        <Grid Grid.Row="0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0" Text="{Binding Login}"/>
+                            <TextBlock Grid.Column="1" Text="{Binding Description}" 
+                                       TextTrimming="CharacterEllipsis" HorizontalAlignment="Right" FontSize="10"/>
+                        </Grid>
+
+                        <TextBlock Grid.Row="1" Text="{Binding Roles}" Margin="0,3,0,0" Opacity="0.6"/>
+                    </Grid>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
         </ListBox>
 
         <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="0,6,0,0">
