--- a/src/Germadent.UserManagementCenter.App/Views/RolesView.xaml
+++ b/src/Germadent.UserManagementCenter.App/Views/RolesView.xaml
@@ -4,9 +4,104 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Germadent.UserManagementCenter.App.Views"
+             xmlns:controls="clr-namespace:Germadent.UI.Controls;assembly=Germadent.UI"
+             xmlns:designTime="clr-namespace:Germadent.UserManagementCenter.App.Views.DesignTime"
+             xmlns:viewModels="clr-namespace:Germadent.UserManagementCenter.App.ViewModels"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             d:DataContext="{d:DesignInstance Type={x:Type designTime:DesignMockRolesManagerViewModel}, IsDesignTimeCreatable=True}">
     <Grid>
-            
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <controls:SearchComboBox Grid.Row="0" LabelText="Поиск ролей" />
+
+            <ListBox Grid.Row="1" Margin="0,6,0,0"
+                     ItemsSource="{Binding Roles}"
+                     SelectedItem="{Binding SelectedRole}">
+                <ListBox.ItemTemplate>
+                    <DataTemplate DataType="{x:Type viewModels:RoleViewModel}">
+                        <Grid Margin="3,0,3,0">
+                            <TextBlock Grid.Row="1" Text="{Binding Name}"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+            </ListBox>
+
+            <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="0,6,0,0">
+                <Button Content="Добавить роль" 
+                        Command="{Binding AddRoleCommand}"/>
+                <Button Content="Редактировать роль" Margin="6,0,0,0"
+                        Command="{Binding EditRoleCommand}"/>
+                <Button Content="Удалить роль" Margin="6,0,0,0"
+                        Command="{Binding DeleteRoleCommand}"/>
+            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Column="1" Margin="6,0,0,0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+
+            <controls:SearchComboBox Grid.Row="0" LabelText="Поиск прав" />
+
+            <ListBox Grid.Row="1" Margin="0,6,0,0"
+                     ItemsSource="{Binding Rights}"
+                     ItemContainerStyle="{StaticResource StlnListBoxItemStyleWithoutSelection}">
+                <ListBox.GroupStyle>
+                    <GroupStyle>
+                        <GroupStyle.ContainerStyle>
+                            <Style TargetType="{x:Type GroupItem}">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate>
+                                           <Grid>
+                                               <Grid.RowDefinitions>
+                                                   <RowDefinition Height="Auto"/>
+                                                   <RowDefinition Height="*"/>
+                                                </Grid.RowDefinitions>
+
+                                               <TextBlock Grid.Row="0" Text="{Binding Name}" Margin="6,6,0,0" FontSize="14" FontWeight="SemiBold"/>
+
+                                               <ItemsPresenter Grid.Row="1" Margin="12,6,0,12"/>
+                                            </Grid>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </GroupStyle.ContainerStyle>
+                    </GroupStyle>
+                </ListBox.GroupStyle>
+                <ListBox.ItemTemplate>
+                    <DataTemplate DataType="{x:Type viewModels:RightViewModel}">
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Path Grid.Column="0" Data="M 0,7.87402L 4.72441,14.1733L 14.1732,4.72443L 14.1732,0L 4.72441,11.0237L 0,4.72443L 0,7.87402 Z" Fill="Green" Width="10" Height="10" Stretch="Uniform" />
+
+                            <TextBlock Grid.Column="1" Text="{Binding Name}" Margin="3,0,0,0"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListBox.ItemTemplate>
+
+            </ListBox>
+
+            <StackPanel Grid.Row="1" Orientation="Horizontal">
+
+            </StackPanel>
+        </Grid>
     </Grid>
 </UserControl>
