--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/CustomerCatalogWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/CustomerCatalogWindow.xaml
@@ -27,7 +27,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical">
-            <controls:SearchComboBox Grid.Row="0" LabelText="Поиск заказчика" HorizontalAlignment="Left" Width="150"/>
+            <controls:SearchComboBox LabelText="Поиск заказчика" HorizontalAlignment="Left" Width="150"/>
 
             <Button Content="Добавить" Margin="0,12,0,0"/>
             <Button Content="Редактировать" Margin="0,6,0,0"/>
