--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/Wizard/MillingCenterInfoStepUserControl.xaml
@@ -36,16 +36,14 @@
         <Border Grid.Row="0" Grid.Column="0">
             <TextBlock Text="Заказчик" Margin="0,0,0,1"/>
         </Border>
-        <TextBox Grid.Row="0" Grid.Column="1" Margin="6,0,0,0"
-                 Text="{Binding Customer, UpdateSourceTrigger=PropertyChanged}" />
+        <TextBox Grid.Row="0" Grid.Column="1" Margin="7,0,49,0"
+                 Text="{Binding Customer, UpdateSourceTrigger=PropertyChanged}" Grid.ColumnSpan="2" />
         <Button Grid.Row="0" Grid.Column="2" Margin="6,0,0,0" Content="..." />
 
-        <Border Grid.Row="1" Grid.Column="0" Margin="0,6,0,0">
-            <TextBlock Text="ФИО пациента" Margin="0,0,0,1"/>
-        </Border>
+        <TextBlock Grid.Row="1" Grid.Column="0" Text="ФИО пациента" Margin="0,6,0,0"/>
+
         <TextBox Grid.Row="1" Grid.Column="1" Margin="6,6,0,0"
                  Text="{Binding Patient, UpdateSourceTrigger=PropertyChanged}" />
-        <Button Grid.Row="1" Grid.Column="2" Margin="6,6,0,0" Content="..." />
 
         <TextBlock Grid.Row="2" Grid.Column="0" Text="ФИО техника" VerticalAlignment="Center"
                    ToolTip="{x:Static properties:Resources.Tooltip_RequredField}"
