--- a/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
+++ b/src/Germadent.Rma.App/Germadent.Rma.App/Views/MainWindow.xaml
@@ -17,14 +17,6 @@
         d:DataContext="{d:DesignInstance Type=designmock:DesignMockMainViewModel, IsDesignTimeCreatable=True}"
         DataContextChanged="MainWindow_OnDataContextChanged"
         FocusManager.FocusedElement="{Binding ElementName=SearchComboBox}">
-    <Window.Resources>
-        <ResourceDictionary>
-            <Style x:Key="DataGridTextStyle" TargetType="{x:Type TextBlock}">
-                <Setter Property="Margin" Value="3,3,3,3"/>
-                <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
-            </Style>
-        </ResourceDictionary>
-    </Window.Resources>
     <Grid Margin="12">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -104,19 +96,19 @@
                 </Style>
             </DataGrid.RowStyle>
             <DataGrid.Columns>
-                <DataGridTextColumn Header="№" ElementStyle="{StaticResource DataGridTextStyle}" Width="Auto" 
+                <DataGridTextColumn Header="№" ElementStyle="{StaticResource DataGridTextBlockStyle}" Width="Auto" 
                                     Binding="{Binding Model.DocNumber}"/>
-                <DataGridTextColumn Header="ЗТЛ/ФЦ" ElementStyle="{StaticResource DataGridTextStyle}" Width="Auto"
+                <DataGridTextColumn Header="ЗТЛ/ФЦ" ElementStyle="{StaticResource DataGridTextBlockStyle}" Width="Auto"
                                     Binding="{Binding Model.BranchType, Converter={StaticResource BranchTypeToStringConverter}}"/>
-                <DataGridTextColumn Header="Создан" ElementStyle="{StaticResource DataGridTextStyle}"  Width="Auto"
+                <DataGridTextColumn Header="Создан" ElementStyle="{StaticResource DataGridTextBlockStyle}"  Width="Auto"
                                     Binding="{Binding Model.Created, StringFormat='dd.MM.yyyy HH:mm'}"/>
-                <DataGridTextColumn Header="Заказчик" ElementStyle="{StaticResource DataGridTextStyle}"  Width="*"
+                <DataGridTextColumn Header="Заказчик" ElementStyle="{StaticResource DataGridTextBlockStyle}"  Width="*"
                                     Binding="{Binding Model.CustomerName}"/>
-                <DataGridTextColumn Header="Пациент" ElementStyle="{StaticResource DataGridTextStyle}"  Width="*"
+                <DataGridTextColumn Header="Пациент" ElementStyle="{StaticResource DataGridTextBlockStyle}"  Width="*"
                                     Binding="{Binding Model.PatientFnp}"/>
-                <DataGridTextColumn Header="Доктор/техник" ElementStyle="{StaticResource DataGridTextStyle}"  Width="*"
+                <DataGridTextColumn Header="Доктор/техник" ElementStyle="{StaticResource DataGridTextBlockStyle}"  Width="*"
                                     Binding="{Binding Model.DoctorFullName}"/>
-                <DataGridTextColumn Header="Закрыт" ElementStyle="{StaticResource DataGridTextStyle}" Width="*"
+                <DataGridTextColumn Header="Закрыт" ElementStyle="{StaticResource DataGridTextBlockStyle}" Width="*"
                                     Binding="{Binding Model.Closed, StringFormat='dd.MM.yyyy HH:mm'}"/>
             </DataGrid.Columns>
         </DataGrid>
